<resources>
    <string name="app_name">科學書店</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="user">帳戶</string>
    <string name="reg_account">帳戶<font color='red'>*</font></string>
    <string name="reg_password">密碼<font color='red'>*</font></string>
    <string name="reg_contact">電話號碼<font color='red'>*</font></string>
    <string name="reg_confirm_password">確認密碼<font color='red'>*</font></string>
    <string name="contact">電話號碼</string>
    <string name="register">註冊</string>
    <string name="back">返回</string>
    <string name="contactNo">電話號碼</string>
    <string name="click_add_photo">點擊增加照片</string>
    <string name="password">密碼</string>>
    <string name="new_password">新密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="please_login_first">請先登入</string>
    <string name="please_add_info_first">請先加入信用卡號碼與地址到帳戶資料中</string>
    <string name="hi_stranger">你好, 訪客</string>
    <string name="browse_history">瀏覽記錄</string>
    <string name="shopping_chart">購物車</string>
    <string name="user_info">帳戶資料</string>
    <string name="new_published">最新上架</string>
    <string name="book_recommended">向你推薦</string>
    <string name="book">書本</string>
    <string name="stock">庫存:&#160;</string>
    <string name="amount">訂購數量:&#160;</string>
    <string name="small_count">小計:&#160;</string>
    <string name="total_count">總計:&#160;</string>
    <string name="closest_shop">最近分店</string>
    <string name="credit_card">信用卡</string>
    <string name="address">地址</string>
    <string name="other">其他</string>

    <string name="save">儲存</string>
    <string name="pay">結算</string>
    <string name="pay_done">購買完成!</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>

    <string name="action_settings">Settings</string>
    <string name="settings">帳戶設定</string>
    <string name="is_history_save">保存瀏覽記錄</string>
    <string name="clear_history">清除瀏覽記錄</string>
    <string name="clear_history_confirm">確認清除瀏覽記錄?</string>

    <string name="serverURL">http://howiehui.tech/BookShopPJ/</string>

    <string name="search">搜尋</string>
    <string name="please_select">--請選擇--</string>
    <string name="ranking">排序</string>
    <string name="result_according_to">按照</string>
    <string name="search_date_new">出版日期(新至舊)</string>
    <string name="hot">熱度</string>
    <string name="price_high">價錢(高至低)</string>
    <string name="price_low">價錢(低至高)</string>
    <string name="rating_high">評分(高至低)</string>
    <string name="rating_low">評分(低至高)</string>
    <string name="your_rating">你的評分</string>
    <string name="rate_success">評分成功</string>
    <string name="rate_cancel">評分已取消</string>
    <string name="rated">已評分</string>

    <string-array name="result_according_to_what">
        <item>@string/book_name</item>
        <item>@string/author_</item>
        <item>@string/publisher_</item>
    </string-array>

    <string-array name="rank_according_to_what">
        <item>@string/search_date_new</item>
        <item>@string/hot</item>
        <item>@string/price_high</item>
        <item>@string/price_low</item>
        <item>@string/rating_high</item>
        <item>@string/rating_low</item>
    </string-array>

    <string-array name="rating">
        <item>@string/please_select</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="please_login">
        <item>@string/please_login_first</item>
    </string-array>

    <string name="book_name">書名</string>
    <string name="publisher_">出版社</string>
    <string name="author_">作者</string>
    <string name="bookname">書名:&#160;</string>
    <string name="publisher">出版社:&#160;</string>
    <string name="author">作者:&#160;</string>
    <string name="price">HK$&#160;</string>
    <string name="rating">評分:&#160;</string>
    <string name="brief">簡介:&#160;</string>
    <string name="title_activity_maps">Map</string>

</resources>
