<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    >
    <ImageView
        android:id="@+id/bookImg_long"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:id="@+id/bookName_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <TextView
        android:id="@+id/bookAuthor_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"/>

    <TextView
        android:id="@+id/bookPublisher_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publisher"/>

    <TextView
        android:id="@+id/bookPrice_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"/>

</android.support.constraint.ConstraintLayout>