<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyAppMainBar">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:logo="@drawable/ic_info_black_24dp"
        app:titleMarginStart="24dp"
        app:title="@string/user_info"
        ></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:isScrollContainer="true"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/add_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/click_to_add_photo"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_add_a_photo_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_add_photo"
                    android:textSize="26sp"
                    app:layout_constraintLeft_toRightOf="@+id/click_to_add_photo"
                    app:layout_constraintTop_toTopOf="@+id/click_to_add_photo"
                    android:layout_marginTop="60dp"
                    />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reg_password"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_photo_layout" />

            <TextView
                android:id="@+id/new_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_password"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/password_text"
                app:layout_constraintTop_toBottomOf="@+id/password_text" />

            <TextView
                android:id="@+id/confirm_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_password"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/new_password_text"
                app:layout_constraintTop_toBottomOf="@+id/new_password_text" />

            <TextView
                android:id="@+id/contact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reg_contact"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/confirm_password_text"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password_text" />

            <TextView
                android:id="@+id/credit_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/credit_card"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/contact_text"
                app:layout_constraintTop_toBottomOf="@+id/contact_text" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/credit_card_text"
                app:layout_constraintTop_toBottomOf="@+id/credit_card_text" />


            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_input" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="輸入密碼(至少6個字元)"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/password_text"
                app:layout_constraintTop_toTopOf="@+id/password_text" />

            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="輸入新密碼(至少6個字元)"
                android:inputType="textPassword"
                android:maxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/new_password_text"
                app:layout_constraintTop_toTopOf="@+id/new_password_text" />

            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="重複輸入新密碼"
                android:inputType="textPassword"
                android:maxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/confirm_password_text"
                app:layout_constraintTop_toTopOf="@+id/confirm_password_text" />

            <EditText
                android:id="@+id/contact_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:hint="輸入電話號碼"
                android:inputType="number"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/contact_text"
                app:layout_constraintTop_toTopOf="@+id/contact_text" />

            <EditText
                android:id="@+id/credit_card_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:hint="輸入信用卡號碼"
                android:maxLength="16"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/credit_card_text"
                app:layout_constraintTop_toTopOf="@+id/credit_card_text" />

            <EditText
                android:id="@+id/address_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:hint="輸入地址"
                android:inputType="textMultiLine"
                android:lines="2"
                android:gravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/address_text"
                app:layout_constraintTop_toTopOf="@+id/address_text" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>
